chore: update fastly manifest version
Signed-off-by: Ren Adachi <49895682+moeyashi@users.noreply.github.com>

--- a/fastly.toml
+++ b/fastly.toml
@@ -1,11 +1,11 @@
 # This file describes a Fastly Compute@Edge package. To learn more visit:
 # https://developer.fastly.com/reference/fastly-toml/
 
-name = "Hono"
+name = "practice-hono-fastly"
 authors = [""]
 description = ""
 language = "javascript"
-manifest_version = 2
+manifest_version = 3
 service_id = ""
 
 [scripts]
