--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "biome check ./src",
     "dev": "fastly compute serve --watch",
     "prebuild": "tsc",
-    "build": "js-compute-runtime build/index.js build/main.wasm",
+    "build": "js-compute-runtime build/index.js bin/main.wasm",
     "deploy": "fastly compute publish"
   },
   "devDependencies": {
