--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "lint": "biome check ./src ./e2e",
-    "test": "echo No Test",
+    "test": "vitest run",
     "dev": "fastly compute serve --watch",
     "prebuild": "tsc",
     "build": "js-compute-runtime build/index.js bin/main.wasm",
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@fastly/compute-testing": "^0.1.3",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite-plugin-fastly-js-compute": "^0.4.2",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "@fastly/js-compute": "3.7.0",
