--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "lib": [
       "es2022"
     ],
+    "types": [
+      "vitest/globals"
+    ],
     "rootDir": "src",
     "outDir": "build",
     "skipLibCheck": true
